fix bit bug + tests + stuff

--- a/compression_project/pom.xml
+++ b/compression_project/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -33,7 +33,17 @@
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
-                <version>1.1.8</version>
+                <version>1.4.11</version>
+                <configuration>
+                    <targetClasses>
+                        <param>tiralabra.compression_project.HuffmanCompression*</param>
+                        <param>tiralabra.compression_project.LZCompression*</param>
+                        <param>tiralabra.datastructure.MyArrayList*</param>
+                        <param>tiralabra.datastructure.MyHashSet*</param>
+                        <param>tiralabra.datastructure.MyPrioQueue*</param>
+                        <param>tiralabra.datastructure.Node*</param>
+                    </targetClasses>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
